--- a/server/composer.json
+++ b/server/composer.json
@@ -1,19 +1,21 @@
 {
-  "name": "todo-platform",
-  "description": "A microservices To Do list platform using Docker, React, Symfony, and MongoDB.",
-  "require": {
-    "php": "^7.4 || ^8.0",
-    "symfony/framework-bundle": "^5.2",
-    "symfony/orm-pack": "^1.0",
-    "doctrine/annotations": "^1.11",
-    "doctrine/orm": "^2.9",
-    "mongodb/mongodb": "^1.9"
-  },
-  "autoload": {
-    "psr-4": {
-      "App\\": "src/"
+    "name": "todo-platform/server",
+    "description": "Todo Platform API",
+    "type": "project",
+    "require": {
+        "php": "^8.2",
+        "symfony/framework-bundle": "^6.3",
+        "doctrine/mongodb-odm-bundle": "^4.6",
+        "ext-mongodb": "^2.1"
+    },
+    "config": {
+        "optimize-autoloader": true,
+        "preferred-install": {
+            "*": "dist"
+        },
+        "sort-packages": true,
+        "platform": {
+            "ext-mongodb": "2.1.0"
+        }
     }
-  },
-  "minimum-stability": "stable",
-  "prefer-stable": true
 }
